# llm_utils

./: .gitignore  README.md  config.py  extract_layer_output.py  gen_llm_answer.py  pyproject.toml  requirements.txt
core/: gen_llm_answer.py  tokenizer_utils.py
core/sublayer_golden/: engine.py  spec.py  vision.py
core/sublayer_golden/specs/: __init__.py  qwen3_vl.py
layer_outputs/: attn_0.pt  attn_k_post_rope_0.pt  attn_k_pre_rope_0.pt  attn_proj_0.pt  attn_q_post_rope_0.pt  attn_q_pre_rope_0.pt  attn_v_0.pt  block_input_0.pt  block_output_0.pt  mlp_0.pt  mlp_linear_fc2_0.pt  norm1_0.pt  norm2_0.pt
